zone de recherche

--- a/index.html
+++ b/index.html
@@ -34,3 +34,48 @@
                     </nav>
                 </div>
             </div>
+            <!-- Zone de recherche ( bouton & filtres )-->    
+            <div class="zoneDeRecherche container">
+                <!-- bouton de recherche  -->
+                <div class="recherche">
+                    <h1>Trouvez votre hébérgement pour des vacances de rêve</h1>
+                    <p>En plein centre ville ou en plaine nature</p>
+                    <div class="formSearch">
+                        <form class="recherche" action="/mon-action.php">
+                            <button type="none"><i class="fas fa-map-marker-alt"></i></button>
+                            <input type="text" name="recherche">
+                            <button class="btnrecherche" type="submit">
+                                <p class="textbtn">Rechercher</p>
+                                <p class="textbtn2"><i class="fas fa-search"></i></p>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <!-- filtres -->
+                <div class="filtres">
+                    <b class="title">Filtres</b>
+                    <div class="content">
+                        <div class=boutonfiltre>
+                            <i class="fa fa-money-bill-wave"></i>
+                            <p>Economique</p>
+                        </div>
+                        <div class=boutonfiltre>
+                            <i class="fa fa-child"></i>
+                            <p>Famillial</p>
+                        </div>
+                        <div class=boutonfiltre>
+                            <i class="fa fa-heart"></i>
+                            <p>Romantique</p>
+                        </div>
+                        <div class=boutonfiltre>
+                            <i class="fa fa-dog"></i>
+                            <p>Animaux autorisés</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="nombrelogementstxt">
+                    <p><i class="fas fa-info"></i> 
+                    <p class="NbLogements"> Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
+            </div>
+        </header>
