--- a/index.html
+++ b/index.html
@@ -79,3 +79,88 @@
                 </div>
             </div>
         </header>
+        <!-- reservation -->
+        <!-- Zone " Hebergement à Marseille -->
+        <main>
+            <section id="hebergement">
+                <div class="reservation container">
+                    <div class="hebergementsClassiques">
+                        <div class="fondgris">
+                            <h1>Hebergements à Marseille</h1>
+                            <div class="group-item">
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Auberge la Cannnebière
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>25e</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Hôtel du port
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>52€</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="fas fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Hôtel les mouettes
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>76€</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Hôtel de la mer
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>46€</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"><i class="far fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Auberge Le Panier
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>23€</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Hôtel chez Amina
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>96€</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="fas fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <strong>Afficher plus</strong>
+                        </div>
+                    </div>
