--- a/index.html
+++ b/index.html
@@ -164,3 +164,52 @@
                             <strong>Afficher plus</strong>
                         </div>
                     </div>
+                    <!-- Zone " Les plus populaires -->
+                    <div class="LesPlusPopulaires">
+                        <div class="fondgris">
+                            <h1>
+                                <p>Les plus populaires</p>
+                                <div class="stonk"><i class="fas fa-chart-line"></i></div>
+                            </h1>
+                            <div class="group-item">
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Hôtel Le soleil du matin
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>128€</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="fas fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Au coeur de l'eau Chambres d'hôtes
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>71€</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Content/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                                    <figcaption>
+                                        <p>
+                                            <strong>
+                                            Hôtel Tout bleu et Blanc
+                                            </strong>
+                                        </p>
+                                        <p>Nuit à partir de <strong>68€</strong></p>
+                                        <div class="etoilesnote"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="far fa-star"></i></i></div>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
