--- a/index.html
+++ b/index.html
@@ -213,3 +213,97 @@
                     </div>
                 </div>
             </section>
+            <!-- Zone " Activités à Marseille -->
+            <section id="activites">
+                <div class="activiteContainer">
+                    <div class="fondgris">
+                        <h1>Activités à Marseille</h1>
+                        <ul class="flex-container">
+                            <div class="group-item">
+                                <div class="column">
+                                    <div class="item">
+                                        <div class="activiteimg"><img src="Content/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+                                        </div>
+                                        <div class="txtActivite">
+                                            <p>
+                                                <strong>
+                                                Vieux Port
+                                                </strong>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="columndouble">
+                                    <div class="item">
+                                        <div class="activiteimg">
+                                            <img src="Content/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                                            <div class="txtActiviteVille">
+                                                <p>
+                                                    <strong>
+                                                    Fort de Pomègues
+                                                    </strong>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="activiteimg">
+                                            <img src="Content/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
+                                            <div class="txtActiviteVille">
+                                                <p>
+                                                    <strong>
+                                                    îles du Frioul
+                                                    </strong>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="group-item">
+                                <div class="column">
+                                    <div class="item">
+                                        <div class="activiteimg"><img src="Content/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+                                        </div>
+                                        <div class="txtActivite">
+                                            <p>
+                                                <strong>
+                                                Parc National des Calanques
+                                                </strong>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="columndouble">
+                                    <div class="item">
+                                        <div class="activiteimg">
+                                            <img src="Content/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+                                            <div class="txtActiviteVille">
+                                                <p>
+                                                    <strong>
+                                                    Notre-Dame-de-la-Garde
+                                                    </strong>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="activiteimg">
+                                            <img src="Content/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+                                            <div class="txtActiviteVille">
+                                                <p>
+                                                    <strong>
+                                                    Parc LongChamp
+                                                    </strong>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+                </ul>
+                </div>
+            </section>
+        </main>
